[package]
name = "yew_svg"
version = "0.2.1"
authors = ["ywzjackal@163.com <ywzjackal@163.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["web", "asmjs", "svg", "yew"]
categories = ["gui", "web-programming"]
description = "SVG icon helper for yew framework"
repository = "https://github.com/ywzjackal/yew_svg"
homepage = "https://github.com/ywzjackal/yew_svg"
documentation = "https://github.com/ywzjackal/yew_svg"

[dependencies]
stdweb = "0.4"
yew = ">=0.5"
